--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "http://juangrajales.me/",
   "dependencies": {
+    "dotenv": "^10.0.0",
+    "emailjs-com": "^3.2.0",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
