--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.0.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "styled-components": "^5.3.3",
     "twemoji": "^13.1.0",
     "web-vitals": "^1.0.1"
